# Backend

./: pyproject.toml  run_with_tunnel.py
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_nickname.py
config/: settings.py  urls.py
memos/: admin.py  models.py  serializers.py  urls.py  views.py
memos/migrations/: 0001_initial.py  0002_memo_date.py
portfolios/: admin.py  models.py  serializers.py  urls.py  views.py
portfolios/migrations/: 0001_initial.py  0002_alter_log_unique_together_alter_project_project_name_and_more.py  0002_alter_tagstyle_tag_color.py  0003_projecthouse_log.py
taggings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
taggings/migrations/: 0001_initial.py  0002_alter_tagging_tag_contents.py
