[project]
name = "loglion"
version = "0.1.0"
description = ""
authors = [
    {name = "wontop02",email = "wjy0502kr@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "paramiko (==3.3.1)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-storages (>=1.14.6,<2.0.0)"
]

[tool.poetry]
packages = [{include = "loglion", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
